[DOCS] Add styleguide comments for all CSS objects and HTML elements

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -260,3 +260,14 @@
 	font-family: @baseFontFamily;
 	color: @baseTextColor;
 }
+
+
+// Example styles
+.kss___exampleWidth {
+	background: #ECECEC;
+	min-height: 32px;
+	font-size: 12px;
+	margin-bottom: 5px;
+	line-height: 1;
+	padding: 10px;
+}
