--- a/Resources/Private/Sass/Generic/_Print.scss
+++ b/Resources/Private/Sass/Generic/_Print.scss
@@ -1,10 +1,8 @@
 /*
- * Print styles - Inlined to avoid another HTTP connection
- *
- * @package #{ext_directory()}
- * @path Generic/_Print.scss
- * @link http://h5bp.com/r
- */
+[Generic] Print
+
+Print styles - Inlined to avoid another HTTP connection
+*/
 
 
 @media print {
