--- a/Resources/Private/Sass/Base/_Base.scss
+++ b/Resources/Private/Sass/Base/_Base.scss
@@ -1,14 +1,8 @@
 /*
- * High-level wrapper elements
- *
- * @package #{ext_directory()}
- * @path Base/_Base.scss
- */
+[Base] Base wrapper elements
 
-
-/* =============================================================================
-$ High level wrapper and elements
-================================================================================ */
+High-level wrapper elements
+*/
 body {
 	/**
 	 * Remove default margin.
