--- a/Resources/Private/Sass/Base/_Typography.scss
+++ b/Resources/Private/Sass/Base/_Typography.scss
@@ -3,41 +3,95 @@
 
 Basic styling for all typographic related elements.
 
-Styleguide 7
+Styleguide 8
 */
 
 
-/* =============================================================================
-$ Typography Elements
-	Contents: 1: Addresses style set to `bolder` in FF3+, S4/5, Chrome.
-						2: Addresses styling not present in IE7/8/9, S5, Chrome.
-						3: Addresses styling not present in IE6/7/8/9.
-						4: Addresses styling not present in S5, Chrome.
-						5: Prevents `sub` and `sup` affecting `line-height` in all browsers.
-							 gist.github.com/413930
-================================================================================ */
+/*
+Base paragraph
+
+Markup:
+<p>I am an paragraph.</p>
+
+Styleguide 8.0.1
+*/
 p {
 	@extend %reset-margin-top;
 	@extend %margin-bottom;
 }
+
+/*
+Bold and strong elements
+
+Markup:
+<b>This text should be displayed in a bolder font-weight than the standard one.</b>
+
+Styleguide 8.0.2
+*/
 b,
 strong {
-	font-weight: $bold; /* 1 */
+	font-weight: $bold; /* Addresses style set to `bolder` in FF3+, S4/5, Chrome. */
 }
+
+/*
+Small text emphasis
+
+Markup:
+<small>This text should be smaller than the standard one.</small>
+
+Styleguide 8.0.3
+*/
 small { font-size: 80%; }
-abbr[title] { /* 2 */
+
+/*
+Abbreviation element
+
+Markup:
+<abbr title="The title of the abbreviation">This is an abbreviation.</abbr>
+
+Styleguide 8.0.4
+*/
+abbr[title] { /* Addresses styling not present in IE7/8/9, S5, Chrome. */
 	border-bottom: 1px dotted;
 	cursor: help;
 }
-mark { /* 3 */
+
+/*
+Marked text emphasis element
+
+Markup:
+<mark>This text should be displayed in a special manner.</mark>
+
+Styleguide 8.0.5
+*/
+mark { /* Addresses styling not present in IE6/7/8/9. */
 	background: map-get($brand-colors, primary);
 	color: color-adjust(map-get($brand-colors, primary), 100%);
 }
+
+/*
+Definition element
+
+Markup:
+<dfn>This text represents the defining instance of a term.</dfn>
+
+Styleguide 8.0.6
+*/
 dfn {
-	font-style: italic; /* 4 */
+	font-style: italic; /* Addresses styling not present in S5, Chrome. */
 }
+
+/*
+Subscript Elements
+
+Markup:
+Regular text - <sup>this will be displayed higher and smaller than the main span of text.</sup><br>
+Regular text - <sub>this will be displayed lower and smaller than the main span of text.</sub>
+
+Styleguide 8.0.7
+*/
 sub,
-sup { /* 5 */
+sup { /* Prevents `sub` and `sup` affecting `line-height` in all browsers. gist.github.com/413930 */
 	font-size: 75%;
 	line-height: 0;
 	position: relative;
@@ -47,9 +101,17 @@ sup { top: -0.5em; }
 sub { bottom: -0.25em; }
 
 
-/* =============================================================================
-$ Code & pre-formatted text elements
-================================================================================ */
+/*
+Code & pre-formatted text elements
+
+Markup:
+<code>.css{ color: red; }</code><br>
+<kbd>.css{ color: red; }</kbd><br>
+<samp>.css{ color: red; }</samp><br>
+<pre>.css{ color: red; }</pre>
+
+Styleguide 8.0.8
+*/
 code,
 kbd,
 pre,
@@ -71,9 +133,15 @@ pre {
 }
 
 
-/* =============================================================================
-$ Quotes
-================================================================================ */
+/*
+Quotes
+
+Markup:
+The following text <q>is an inline-quote</q>
+<blockquote>This text is a full quotation element</blockquote>
+
+Styleguide 8.0.9
+*/
 q {
 	/**
 	 * Sets consistent quote types.
@@ -97,9 +165,14 @@ blockquote {
 }
 
 
-/* =============================================================================
-$ Seperators
-================================================================================ */
+/*
+Horizontal ruler
+
+Markup:
+<hr>
+
+Styleguide 8.0.10
+*/
 %horizontal-ruler,
 hr {
 	/**
@@ -146,7 +219,7 @@ Typographic Helper Classes
 Markup:
 <p class="{$modifiers}">I am an paragraph.</p>
 
-Styleguide 7.0.1
+Styleguide 8.0.11
 */
 .align-center { text-align: center; }
 .align-right  { text-align: right; }
