--- a/Resources/Private/Sass/Generic/_Helper.scss
+++ b/Resources/Private/Sass/Generic/_Helper.scss
@@ -1,21 +1,37 @@
 /*
- * Helper Classes from the boilerplate project
- *
- * @package #{ext_directory()}
- * @path Generic/_Helper.scss
- * @link http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
- */
+[Generic] Helpers
+
+Several helper classes which can be used independently from each other to create the desired stylings.
+
+Styleguide 10
+*/
 
 
-/**
- * Quick floats
- */
+/*
+Quick floats
+
+.fl-r - Floats the element to the right boundary.
+.fl-l - Floats the element to the left boundary.
+
+Markup:
+<span class="{$modifiers}">I am an paragraph.</span>
+
+Styleguide 10.0.1
+*/
 .fl-r { float: right; }
 .fl-l { float: left; }
 
-/**
- * For image replacement
- */
+
+/*
+Image replacement
+
+Hides the text of a container and displays a image instead, you will need to set dimensions, as well as an background-image to see this helper class in action.
+
+Markup:
+<span class="ir">This text won't be visible for a user, but can be accessed by robots & assistive devices.</span>
+
+Styleguide 10.0.2
+*/
 .ir,
 .imageReplacement {
 	background-color: transparent;
@@ -24,17 +40,24 @@
 	font: 0/0 a;
 }
 
-/**
- * Hide from both screenreaders and browsers: h5bp.com/u
- */
+
+/*
+Hidden helpers
+
+.hidden - Hide from both screenreaders and browsers: h5bp.com/u
+.visuallyhidden - Hide only visually, but have it available for screenreaders: h5bp.com/v
+.visuallyhidden.focusable - Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p
+.invisible - Hide visually and from screenreaders, but maintain layout
+
+Markup:
+<div class="{$modifiers}">This element won't be visible.</div>
+
+Styleguide 10.0.3
+*/
 .hidden {
 	display: none !important;
 	visibility: hidden;
 }
-
-/**
- * Hide only visually, but have it available for screenreaders: h5bp.com/v
- */
 .visuallyhidden {
 	border: 0;
 	clip: rect(0 0 0 0);
@@ -45,10 +68,6 @@
 	position: absolute;
 	width: 1px;
 }
-
-/**
- * Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard: h5bp.com/p
- */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
 	clip: auto;
@@ -58,15 +77,19 @@
 	position: static;
 	width: auto;
 }
-
-/**
- * Hide visually and from screenreaders, but maintain layout
- */
 .invisible { visibility: hidden; }
 
-/**
- * Contain floats: h5bp.com/q
- */
+
+/*
+Clearfix
+
+Contain floats: h5bp.com/q
+
+Markup:
+<div class="cf">This element will clear any floats inside of it.</div>
+
+Styleguide 10.0.4
+*/
 .cf,
 .clearfix {
 	&:before, &:after { content: ""; display: table; }
