--- a/Resources/Private/Sass/Base/_Links.scss
+++ b/Resources/Private/Sass/Base/_Links.scss
@@ -1,9 +1,9 @@
 /*
-[Base] Links
+Anchors / Link elements
 
 Basic styling for anchor tags.
 
-Styleguide 5
+Styleguide 2.4
 */
 
 
@@ -13,7 +13,7 @@ Standard anchors
 Markup:
 <a href="#">I am an anchor element.</a>
 
-Styleguide 5.0.1
+Styleguide 2.4.1
 */
 a {
 	color: $link-color;
