--- a/Resources/Private/Sass/Base/_Tables.scss
+++ b/Resources/Private/Sass/Base/_Tables.scss
@@ -1,14 +1,14 @@
 /*
-[Base] Tables
+Table elements
 
 Basic styling and extended classes for tables.
 
-Styleguide 7
+Styleguide 2.6
 */
 
 
 /*
-Tables
+Table classes
 
 .table - Base class for all table-styles.
 .table.table--bordered - Extends the base '.table' class to an basic bordered table.
@@ -44,7 +44,7 @@ Markup:
 	</tbody>
 </table>
 
-Styleguide 7.0.1
+Styleguide 2.6.1
 */
 table {
 	max-width: 100%;
