--- a/Resources/Private/Sass/Base/_Headings.scss
+++ b/Resources/Private/Sass/Base/_Headings.scss
@@ -1,9 +1,9 @@
 /*
-[Base] Headings
+Heading elements
 
 Basic styling for headings and sub-headings
 
-Styleguide 4
+Styleguide 2.2
 */
 
 
@@ -18,7 +18,7 @@ Markup:
 <h5>I am an fifth-level heading</h5>
 <h6>I am an sixth-level heading</h6>
 
-Styleguide 4.0.1
+Styleguide 2.2.1
 */
 h1, h2, h3,
 h4, h5, h6 {
@@ -45,7 +45,7 @@ Heading modifiers
 Markup:
 <h1 class="{$modifiers}">I am an first-level heading</h1>
 
-Styleguide 4.0.2
+Styleguide 2.2.2
 */
 @each $key, $value in map-get($headings, elements) {
 	$headingFontSize: map-fetch($headings, elements $key font-size);
