--- a/Resources/Private/Sass/Base/_Lists.scss
+++ b/Resources/Private/Sass/Base/_Lists.scss
@@ -1,9 +1,9 @@
 /*
-[Base] Lists
+List elements
 
 Basic styling for lists and definition elements
 
-Styleguide 6
+Styleguide 2.5
 */
 
 
@@ -28,7 +28,7 @@ Markup:
 	<li>I am the fourth list-element.</li>
 </ol>
 
-Styleguide 6.0.1
+Styleguide 2.5.1
 */
 menu,
 ol,
@@ -77,7 +77,7 @@ Markup:
 	<dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
 </dl>
 
-Styleguide 6.0.3
+Styleguide 2.5.3
 */
 dl {
 	@extend %reset-margin-top;
