--- a/Resources/Private/Sass/Generic/_Helper.scss
+++ b/Resources/Private/Sass/Generic/_Helper.scss
@@ -1,14 +1,20 @@
 /*
-[Generic] Helpers
+Helper classes
 
 Several helper classes which can be used independently from each other to create the desired stylings.
 
-Styleguide 10
+Styleguide 3
 */
 
 
+//
+// General helpers
+//
+// Styleguide 3.1
+//
+
 /*
-Quick floats
+Float helpers
 
 .fl-r - Floats the element to the right boundary.
 .fl-l - Floats the element to the left boundary.
@@ -16,33 +22,29 @@ Quick floats
 Markup:
 <span class="{$modifiers}">I am an paragraph.</span>
 
-Styleguide 10.0.1
+Styleguide 3.1.1
 */
 .fl-r { float: right; }
 .fl-l { float: left; }
 
-
 /*
-Image replacement
+Float clearfix
 
-Hides the text of a container and displays a image instead, you will need to set dimensions, as well as an background-image to see this helper class in action.
+Contain floats: h5bp.com/q
 
 Markup:
-<span class="ir">This text won't be visible for a user, but can be accessed by robots & assistive devices.</span>
+<div class="cf">This element will clear any floats inside of it.</div>
 
-Styleguide 10.0.2
+Styleguide 3.1.2
 */
-.ir,
-.imageReplacement {
-	background-color: transparent;
-	border: 0;
-	overflow: hidden;
-	font: 0/0 a;
+.cf,
+.clearfix {
+	&:before, &:after { content: ""; display: table; }
+	&:after { clear: both; }
 }
 
-
 /*
-Hidden helpers
+Visibillity helpers
 
 .hidden - Hide from both screenreaders and browsers: h5bp.com/u
 .visuallyhidden - Hide only visually, but have it available for screenreaders: h5bp.com/v
@@ -52,7 +54,7 @@ Hidden helpers
 Markup:
 <div class="{$modifiers}">This element won't be visible.</div>
 
-Styleguide 10.0.3
+Styleguide 3.1.3
 */
 .hidden {
 	display: none !important;
@@ -79,19 +81,20 @@ Styleguide 10.0.3
 }
 .invisible { visibility: hidden; }
 
-
 /*
-Clearfix
+Image replacement helper
 
-Contain floats: h5bp.com/q
+Hides the text of a container and displays a image instead, you will need to set dimensions, as well as an background-image to see this helper class in action.
 
 Markup:
-<div class="cf">This element will clear any floats inside of it.</div>
+<span class="ir">This text won't be visible for a user, but can be accessed by robots & assistive devices.</span>
 
-Styleguide 10.0.4
+Styleguide 3.1.4
 */
-.cf,
-.clearfix {
-	&:before, &:after { content: ""; display: table; }
-	&:after { clear: both; }
+.ir,
+.imageReplacement {
+	background-color: transparent;
+	border: 0;
+	overflow: hidden;
+	font: 0/0 a;
 }
