--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -12,6 +12,7 @@
 //
 // SASS Functions, Mixins and Variables
 //
+// Styleguide 1
 //
 @import "_Settings/_All",
         "_Variables";
@@ -27,7 +28,9 @@
         "Generic/_Brand";
 
 //
-// Base element stylings
+// Element styles
+//
+// Styleguide 2
 //
 @import "Base/_Base",
         "Base/_Headings",
@@ -39,7 +42,11 @@
         "Base/_Forms";
 
 //
-// Objects
+// OOCSS Objects
+//
+// The purpose of CSS Objects is to encourage code reuse and, ultimately, faster and more efficient stylesheets that are easier to add to and maintain.
+//
+// Styleguide 4
 //
 @import "Objects/_Button",
 	"Objects/_Form",
