--- a/Resources/Private/Sass/_Settings/_Functions.scss
+++ b/Resources/Private/Sass/_Settings/_Functions.scss
@@ -1,7 +1,7 @@
 //
-// [Sass] Functions
+// Functions
 //
-// Styleguide 1
+// Styleguide 1.1
 //
 
 
@@ -15,7 +15,7 @@
 // 	background-image: image-url("logo.png");
 // }
 //
-// Styleguide 1.0.1
+// Styleguide 1.1.1
 //
 @function image-url($imagePath) {
   @return url(#{"../Images/" + $imagePath});
@@ -33,7 +33,7 @@
 // 	font-size: rs(19, 16);
 // }
 //
-// Styleguide 1.0.2
+// Styleguide 1.1.2
 //
 @function rs($target-size, $context: $base-font-size, $unit: em) {
 	@return #{$target-size/$context}$unit;
@@ -68,7 +68,7 @@ $end: right !default;
 //   background: color-adjust(#0097d7, 100%);
 // }
 //
-// Styleguide 1.0.3
+// Styleguide 1.1.3
 //
 @function color-adjust($color, $contrast: 100%) {
 	@if (lightness($color) > 50) {
@@ -92,7 +92,7 @@ $end: right !default;
 //   }
 // }
 //
-// Styleguide 1.0.4
+// Styleguide 1.1.4
 //
 @function map-fetch($map, $keys) {
 	$key: nth($keys, 1);
@@ -118,7 +118,7 @@ $end: right !default;
 // Markup:
 // $newDecalarationsMap: map-removeKeys($declarations, font-size margin-bottom);
 //
-// Styleguide 1.0.5
+// Styleguide 1.1.5
 //
 @function map-removeKeys($map, $keys) {
 	$length: length($keys);
