[TASK] Link the site-header styleguideName to the index page

--- a/Documentation/Private/Template/index.html
+++ b/Documentation/Private/Template/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="kssBody">
 	<header class="kss___header" role="banner">
-		<h1><!= pkg.name !> Styleguide</h1>
+		<h1><a href="index.html"><!= pkg.name !> Styleguide</a></h1>
 	</header>
 	<div class="g">
 		<div class="gi one-quarter">
