[TASK] Create a single Sass partial for the code related base element styling

--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -37,6 +37,7 @@
         "Base/_Typography",
         "Base/_Links",
         "Base/_Lists",
+        "Base/_Code",
         "Base/_Media",
         "Base/_Tables",
         "Base/_Forms";
