[TASK] Create a single Sass partial for the quotation related base element styling

--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -38,6 +38,7 @@
         "Base/_Links",
         "Base/_Lists",
         "Base/_Code",
+        "Base/_Quotes",
         "Base/_Media",
         "Base/_Tables",
         "Base/_Forms";
