--- a/Resources/Private/Sass/Main.scss
+++ b/Resources/Private/Sass/Main.scss
@@ -39,6 +39,7 @@
         "Base/_Lists",
         "Base/_Code",
         "Base/_Quotes",
+        "Base/_Ruler",
         "Base/_Media",
         "Base/_Tables",
         "Base/_Forms";
