[TASK] Indent the styleguide footer to prevent the sticky sideNav from overlapping it

--- a/Documentation/Private/Template/public/kss.less
+++ b/Documentation/Private/Template/public/kss.less
@@ -288,6 +288,7 @@
 /* Footer */
 .kss___footer {
 	margin-top: @baseSpacing*2;
+	margin-left: 23%;
 	padding: 26px @baseIndent;
 	border-top: 1px solid @baseBorderColor;
 	font-size: 11.5px;
