[DOCS] Fix a typo

--- a/Resources/Private/Sass/Generic/_Brand.scss
+++ b/Resources/Private/Sass/Generic/_Brand.scss
@@ -41,7 +41,7 @@ Styleguide 5.1.2
 Brand font-family helper
 
 Markup:
-<span class="brandFace">This text will be set in teh brands font-family.</span>
+<span class="brandFace">This text will be set in the brands font-family.</span>
 
 Styleguide 5.1.3
 */
