[DOCS] Fix some typos in the Sass documentation

--- a/Resources/Private/Sass/Base/_Forms.scss
+++ b/Resources/Private/Sass/Base/_Forms.scss
@@ -10,7 +10,7 @@ Styleguide 2.1
 /*
 Text inputs
 
-.textInput         - Base style class `.textInput`
+.textInput         - Basic styling for text input elements.
 
 Markup:
 <input type="text" class="{$modifiers}" /><br>
